--- a/index.html
+++ b/index.html
@@ -87,6 +87,56 @@
           <button class="btn-superiority">Yuk Mulai!</button>
         </div>
       </section>
+
+      <section class="price">
+        <div class="price-text">
+          <h1>Pricelist</h1>
+          <p>Kami menawarkan harga yang terjangkau</p>
+        </div>
+        <div class="switcher">
+          <button class="on-tab">Per bulan</button>
+          <button class="off-tab">Per course</button>
+        </div>
+        <div class="row-card">
+          <div class="card-price">
+            <h2>Pemula</h2>
+            <h3>0<span>IDR</span></h3>
+            <div class="card-price-list">
+              <img src="./assets/img/check.svg" alt="" />
+              <p>1 Course setiap bulan</p>
+            </div>
+            <button>Gaspol</button>
+          </div>
+          <div class="card-price" style="border: 3px solid #46780f">
+            <h2 style="color: #46780f">Pro</h2>
+            <h3 style="color: #46780f">
+              100K<span style="color: #46780f">IDR</span>
+            </h3>
+            <div class="card-price-list">
+              <img src="./assets/img/check.svg" alt="" />
+              <p>10 Course setiap bulan</p>
+            </div>
+            <div class="card-price-list">
+              <img src="./assets/img/check.svg" alt="" />
+              <p>Chat Mentor</p>
+            </div>
+            <div class="card-price-list">
+              <img src="./assets/img/check.svg" alt="" />
+              <p>10 Course setiap bulanForum Diskusi</p>
+            </div>
+            <button>Gaspol</button>
+          </div>
+          <div class="card-price">
+            <h2>Pemula</h2>
+            <h3>150K<span>IDR</span></h3>
+            <div class="card-price-list">
+              <img src="./assets/img/check.svg" alt="" />
+              <p>1 Course setiap bulan</p>
+            </div>
+            <button>Gaspol</button>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
