--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
         </div>
       </section>
 
-
       <section class="price">
-
         <div class="price-text">
           <h1>Pricelist</h1>
           <p>Kami menawarkan harga yang terjangkau</p>
@@ -102,20 +100,74 @@
         </div>
 
         <div class="row-card">
-
           <div class="card-price">
-            <h2>Pemula</h2>
-            <h3>0<span>IDR</span></h3>
-            <div class="card-price-list">
+            <div class="label">
+              <h2>Pemula</h2>
+              <h3>0<span>IDR</span></h3>
+                <div class="card-price-list">
               <img src="./assets/img/check.svg" alt="" />
               <p>1 Course setiap bulan</p>
+                </div>
             </div>
+
             <div class="btn-subs">
               <button>Gaspol</button>
             </div>
           </div>
 
           <div class="card-price" style="border: 3px solid #46780f">
+            <div class="label">
+                <h2 style="color: #46780f">Pro</h2>
+                <h3 style="color: #46780f">
+                  100K<span style="color: #46780f">IDR</span>
+                </h3>
+                <div class="card-price-list">
+                    <img src="./assets/img/check.svg" alt="" />
+                    <p>10 Course setiap bulan</p>
+                  </div>
+                  <div class="card-price-list">
+                    <img src="./assets/img/check.svg" alt="" />
+                    <p>Chat Mentor</p>
+                  </div>
+                  <div class="card-price-list">
+                    <img src="./assets/img/check.svg" alt="" />
+                    <p>10 Course setiap bulanForum Diskusi</p>
+                  </div>
+            </div>
+
+            <div class="btn-subs">
+              <button style="background-color: #46780f ">Gaspol</button>
+            </div>
+          </div>
+
+          <div class="card-price" >
+            <div class="label">
+                <h2>Pro</h2>
+                <h3>
+                  150K<span>IDR</span>
+                </h3>
+                <div class="card-price-list">
+                    <img src="./assets/img/check.svg" alt="" />
+                    <p>Unlimited course / Bulan</p>
+                  </div>
+                  <div class="card-price-list">
+                    <img src="./assets/img/check.svg" alt="" />
+                    <p>Chat Mentor</p>
+                  </div>
+                  <div class="card-price-list">
+                    <img src="./assets/img/check.svg" alt="" />
+                    <p>10 Course setiap bulanForum Diskusi</p>
+                  </div>
+            </div>
+
+            <div class="btn-subs">
+              <button>Gaspol</button>
+            </div>
+          </div>
+
+          
+
+          <!-- <div class="card-price" style="border: 3px solid #46780f">
             <h2 style="color: #46780f">Pro</h2>
             <h3 style="color: #46780f">
               100K<span style="color: #46780f">IDR</span>
@@ -148,8 +200,7 @@
             <div class="btn-subs">
               <button>Gaspol</button>
             </div>
-            
-          </div>
+          </div> -->
         </div>
       </section>
     </div>
