sction-testi-jumbotron

--- a/index.html
+++ b/index.html
@@ -164,43 +164,35 @@
               <button>Gaspol</button>
             </div>
           </div>
+        </div>
+      </section>
 
-          
-
-          <!-- <div class="card-price" style="border: 3px solid #46780f">
-            <h2 style="color: #46780f">Pro</h2>
-            <h3 style="color: #46780f">
-              100K<span style="color: #46780f">IDR</span>
-            </h3>
-            <div class="card-price-list">
-              <img src="./assets/img/check.svg" alt="" />
-              <p>10 Course setiap bulan</p>
+      <section class="testimoni">
+        <div class="deskripsi-testi">
+          <div class="deskripsi-testi-title">
+            <h1>Testimonial dari customer kami yang puas</h1>
+          </div>
+          <div class="user-testi">
+            <div class="user-profile">
+            <img src="/assets/img/user1.svg" alt="">
+            <p>Andhika Prasetya</p>
             </div>
-
-            <div class="card-price-list">
-              <img src="./assets/img/check.svg" alt="" />
-              <p>Chat Mentor</p>
-            </div>
-            <div class="card-price-list">
-              <img src="./assets/img/check.svg" alt="" />
-              <p>10 Course setiap bulanForum Diskusi</p>
-            </div>
-            <div class="btn-subs">
-              <button>Gaspol</button>
+            <div class="user-testi-desc">
+              <h3>"Isinya daging semua"</h3>
+              <p>Beneran dari beberapa online course yang saya ikut, dev ini adalah salah satu yang terbaik karena memang materinya sangat to the point dan beginner friendly </p>
+              <img src="/assets/img/pagination.svg" alt="">
             </div>
           </div>
+        </div>
+      </section>
 
-          <div class="card-price">
-            <h2>Pemula</h2>
-            <h3>150K<span>IDR</span></h3>
-            <div class="card-price-list">
-              <img src="./assets/img/check.svg" alt="" />
-              <p>1 Course setiap bulan</p>
-            </div>
-            <div class="btn-subs">
-              <button>Gaspol</button>
-            </div>
-          </div> -->
+      <section class="jumbotron">
+        <div class="jumbotron-title">
+          <h1>mulai belajar di DEV, <span>GRATIS</span> Gaes!</h1>
+          <p>Kamu akan mendapatkan 1 course gratis dari DEV setiap bulannya </p>
+        </div>
+        <div class="btn-jumbotron">
+          <button>Yuk Mulai!</button>
         </div>
       </section>
     </div>
